--- a/po/hu.po
+++ b/po/hu.po
@@ -1,16 +1,16 @@
 # Hungarian translation of libfm.
-# Copyright (C) 2010 The LXDE Team
+# Copyright (C) 2010-2011 The LXDE Team
 # This file is distributed under the same license as the libfm package.
-# Laszlo Dvornik <dvornik@gnome.hu>, 2010.
+# Laszlo Dvornik <rezuri@zoho.com>, 2010-2011.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: libfm\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-08-09 21:06+0200\n"
-"PO-Revision-Date: 2010-10-28 17:46+0200\n"
-"Last-Translator: Laszlo Dvornik <dvornik@gnome.hu>\n"
-"Language-Team: Hungarian <hu@li.org>\n"
+"PO-Revision-Date: 2011-09-03 15:05+0200\n"
+"Last-Translator: Laszlo Dvornik <rezuri@zoho.com>\n"
+"Language-Team: Hungarian\n"
 "Language: hu\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -34,7 +34,7 @@ msgid ""
 "  <b>%u</b>: Represents a single URI of the file\n"
 "  <b>%U</b>: Represents multiple URIs"
 msgstr ""
-"<b>Ezeke a speciális kódok használhatóak a parancsoknál:</b>\n"
+"<b>Ezek a speciális kódok használhatóak a parancsoknál:</b>\n"
 "  <b>%f</b>: Egy fájl nevét jelöli\n"
 "  <b>%F</b>: Több fájl nevét jelöli\n"
 "  <b>%u</b>: A fájlt egy URI-ját jelöli\n"
@@ -50,7 +50,7 @@ msgstr "Egyéni parancs"
 
 #: ../data/ui/app-chooser.glade.h:11
 msgid "Execute in terminal emulator"
-msgstr "Futtás terminálban"
+msgstr "Futtatás terminálban"
 
 #: ../data/ui/app-chooser.glade.h:12
 msgid "Installed Application"
@@ -110,7 +110,7 @@ msgstr "---"
 
 #: ../data/ui/file-prop.glade.h:2
 msgid "<b>Access Control</b>"
-msgstr "<b>Hozzáféréskezelés</b>"
+msgstr "<b>Hozzáférés-kezelés</b>"
 
 #: ../data/ui/file-prop.glade.h:3
 msgid "<b>File Type:</b>"
@@ -431,7 +431,7 @@ msgstr "Szimbolikus hivatkozások létrehozása"
 
 #: ../src/gtk/fm-progress-dlg.c:463
 msgid "Changing file attributes"
-msgstr "Fájljellemzők megváltozatása"
+msgstr "Fájljellemzők megváltoztatása"
 
 #: ../src/gtk/fm-file-properties.c:117 ../src/gtk/fm-file-properties.c:122
 msgid "byte"
@@ -491,15 +491,15 @@ msgstr "Írd be egy új nevet:"
 
 #: ../src/gtk/fm-side-pane.c:49 ../src/gtk/fm-side-pane.c:297
 msgid "Places"
-msgstr ""
+msgstr "Helyek"
 
 #: ../src/gtk/fm-side-pane.c:50 ../src/gtk/fm-side-pane.c:307
 msgid "Directory Tree"
-msgstr ""
+msgstr "Könyvtárfa"
 
 #: ../src/gtk/fm-side-pane.c:51
 msgid "Remote"
-msgstr ""
+msgstr "Távoli"
 
 #: ../src/gtk/fm-file-menu.c:86 ../src/gtk/fm-file-menu.c:87
 msgid "Open With..."
@@ -579,12 +579,11 @@ msgstr "Hiba"
 
 #: ../src/gtk/fm-gtk-utils.c:55 ../src/gtk/fm-gtk-utils.c:67
 msgid "Confirm"
-msgstr ""
+msgstr "Megerősítés"
 
 #: ../src/gtk/fm-gtk-utils.c:106
-#, fuzzy
 msgid "Question"
-msgstr "Leírás"
+msgstr "Kérdés"
 
 #: ../src/gtk/fm-gtk-utils.c:282
 msgid "Please select a folder"
@@ -630,12 +629,11 @@ msgstr "'%s' fájl futtatható. Futtatni szeretnéd?"
 
 #: ../src/gtk/fm-dir-tree-model.c:353
 msgid "<No Sub Folder>"
-msgstr ""
+msgstr "<Nincs alkönyvtár>"
 
 #: ../src/gtk/fm-dir-tree-model.c:355
-#, fuzzy
 msgid "Loading..."
-msgstr "Előkészítés..."
+msgstr "Betöltés..."
 
 #: ../src/job/fm-dir-list-job.c:231 ../src/job/fm-dir-list-job.c:240
 #: ../src/job/fm-dir-list-job.c:337
