--- a/po/sl.po
+++ b/po/sl.po
@@ -1,26 +1,25 @@
+# Slovenian translation of libfm.
+# Copyright (C) 2011 Free Software Foundation, Inc.
+# This file is distributed under the same license as the libfm package.
+# Klemen Košir <klemen.kosir@gmx.com>, 2011.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: libfm\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-08-09 21:06+0200\n"
-"PO-Revision-Date: 2011-06-16 11:43+0200\n"
-"Last-Translator: Klemen <klemen.kosir@gmx.com>\n"
-"Language-Team: paxman <paxmanpwnz@gmail.com>\n"
+"PO-Revision-Date: 2011-11-25 21:11+0100\n"
+"Last-Translator: Klemen Košir <klemen.kosir@gmx.com>\n"
+"Language-Team: Slovenian <lugos-slo@lugos.si>\n"
 "Language: sl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=4; plural=(n%100==1 ? 1 : n%100==2 ? 2 : n%100==3 || n"
-"%100==4 ? 3 : 0);;\n"
-"X-Generator: Pootle 2.0.5\n"
-"X-Poedit-Language: Slovenian\n"
-"X-Poedit-SourceCharset: utf-8\n"
-"X-Poedit-Country: SLOVENIA\n"
+"Plural-Forms: nplurals=4; plural=(n%100==1 ? 1 : n%100==2 ? 2 : n%100==3 || n%100==4 ? 3 : 0);\n"
 
 #: ../data/ui/app-chooser.glade.h:1
 msgid "<b>Command line to execute:</b>"
-msgstr "<b>Ukaz, ki bo izveden:</b>"
+msgstr "<b>Ukaz:</b>"
 
 #: ../data/ui/app-chooser.glade.h:2
 msgid "<b>File Type To be Opened:</b>"
@@ -35,11 +34,11 @@ msgid ""
 "  <b>%u</b>: Represents a single URI of the file\n"
 "  <b>%U</b>: Represents multiple URIs"
 msgstr ""
-"<b>Te posebne znake lahko uporabite v ukazni vrstici:</b>\n"
-"  <b>%f</b>: predstavlja eno ime datoteke\n"
+"<b>V ukazni vrstici lahko uporabite naslednje kode:</b>\n"
+"  <b>%f</b>: predstavlja ime datoteke\n"
 "  <b>%F</b>: predstavlja več imen datotek\n"
-"  <b>%u</b>: predstavlja en URI datoteke\n"
-"  <b>%U</b>: predstavlja več URI-jev datotek"
+"  <b>%u</b>: predstavlja URI datoteke\n"
+"  <b>%U</b>: predstavlja več URI-jev"
 
 #: ../data/ui/app-chooser.glade.h:9
 msgid "Choose An Application"
@@ -71,17 +70,17 @@ msgid ""
 "\n"
 "Do you want to replace the existing file"
 msgstr ""
-"<b>Na tem mestu datoteka z enakim imenom že obstaja.</b>\n"
+"<b>Datoteka s tem imenom že obstaja.</b>\n"
 "\n"
 "Ali želite zamenjati obstoječo datoteko"
 
 #: ../data/ui/ask-rename.glade.h:4
 msgid "Apply this option to all existing files"
-msgstr "To možnost uporabi za vse obstoječe datoteke"
+msgstr "Uporabi to izbiro za vse obstoječe datoteke"
 
 #: ../data/ui/ask-rename.glade.h:5
 msgid "Confirm to replace files"
-msgstr "Potrdite zamenjavo datotek"
+msgstr "Datoteka že obstaja"
 
 #: ../data/ui/ask-rename.glade.h:6
 msgid "File Name:"
@@ -101,7 +100,7 @@ msgstr "Pre_skoči"
 
 #: ../data/ui/ask-rename.glade.h:10
 msgid "with the following file?"
-msgstr "s sledečo datoteko?"
+msgstr "z naslednjo datoteko?"
 
 #: ../data/ui/file-prop.glade.h:1
 msgid "---"
@@ -169,7 +168,7 @@ msgstr "Lastnosti datoteke"
 
 #: ../data/ui/file-prop.glade.h:17
 msgid "Make the file executable"
-msgstr "Naredi datoteko izvedljivo"
+msgstr "Datoteka je izvedljiva"
 
 #: ../data/ui/file-prop.glade.h:18
 msgid "None"
@@ -185,9 +184,7 @@ msgstr "Dejanja, ki jih lahko izvede lastnik datoteke"
 
 #: ../data/ui/file-prop.glade.h:21
 msgid "Operations that users in the same group as the owner of the file can do"
-msgstr ""
-"Dejanja, ki jih lahko izvedejo uporabniki iz iste skupine kot lastnik "
-"datoteke"
+msgstr "Dejanja, ki jih lahko izvedejo uporabniki iz iste skupine kot lastnik datoteke"
 
 #: ../data/ui/file-prop.glade.h:22
 msgid "Read and Write"
@@ -260,7 +257,8 @@ msgstr "Ukazna vrstica:"
 msgid "File Associations"
 msgstr "Datotečne povezave"
 
-#: ../data/ui/preferred-apps.glade.h:6 ../data/libfm-pref-apps.desktop.in.h:1
+#: ../data/ui/preferred-apps.glade.h:6
+#: ../data/libfm-pref-apps.desktop.in.h:1
 msgid "Preferred Applications"
 msgstr "Prednostni programi"
 
@@ -269,17 +267,12 @@ msgid "System Applications"
 msgstr "Sistemski programi"
 
 #: ../data/ui/preferred-apps.glade.h:8
-msgid ""
-"The preferred Mail Client will be used to compose emails when you click on E-"
-"mail addresses."
-msgstr ""
-"Ob kliku na naslov elektronske pošte bo za sestavo sporočila uporabljen "
-"prednostni poštni odjemalec."
+msgid "The preferred Mail Client will be used to compose emails when you click on E-mail addresses."
+msgstr "Prednostni poštni odjemalec bo uporabljen za sestavljanje elektronske pošte."
 
 #: ../data/ui/preferred-apps.glade.h:9
 msgid "The preferred Web Browser will be used to open hyperlinks."
-msgstr ""
-"Za odprtje spletnega naslova bo uporabljen prednostni spletni brskalnik."
+msgstr "Prednostni spletni brskalnik bo uporabljen za odpiranje povezav."
 
 #: ../data/ui/exec-file.glade.h:1
 msgid "Execute File"
@@ -289,7 +282,8 @@ msgstr "Izvedi datoteko"
 msgid "Execute in _Terminal"
 msgstr "Izvedi v _terminalu"
 
-#: ../src/base/fm-utils.c:55 ../src/base/fm-utils.c:84
+#: ../src/base/fm-utils.c:55
+#: ../src/base/fm-utils.c:84
 #, c-format
 msgid "%u byte"
 msgid_plural "%u bytes"
@@ -346,7 +340,8 @@ msgstr "Smeti"
 msgid "My Computer"
 msgstr "Moj računalnik"
 
-#: ../src/base/fm-path.c:739 ../src/gtk/fm-places-model.c:524
+#: ../src/base/fm-path.c:739
+#: ../src/gtk/fm-places-model.c:524
 msgid "Applications"
 msgstr "Programi"
 
@@ -358,7 +353,8 @@ msgstr "Omrežje"
 msgid ": "
 msgstr ": "
 
-#: ../src/gtk/fm-progress-dlg.c:214 ../src/gtk/fm-progress-dlg.c:233
+#: ../src/gtk/fm-progress-dlg.c:214
+#: ../src/gtk/fm-progress-dlg.c:233
 #, c-format
 msgid ""
 "Type: %s\n"
@@ -367,20 +363,21 @@ msgid ""
 msgstr ""
 "Vrsta: %s\n"
 "Velikost: %s\n"
-"Spremenjeno: %s"
+"Datum spremembe: %s"
 
-#: ../src/gtk/fm-progress-dlg.c:221 ../src/gtk/fm-progress-dlg.c:240
+#: ../src/gtk/fm-progress-dlg.c:221
+#: ../src/gtk/fm-progress-dlg.c:240
 #, c-format
 msgid ""
 "Type: %s\n"
 "Modified: %s"
 msgstr ""
 "Vrsta: %s\n"
-"Spremenjeno: %s"
+"Datum spremembe: %s"
 
 #: ../src/gtk/fm-progress-dlg.c:312
 msgid "The file operation is cancelled and there are some errors."
-msgstr "Dejanje nad datoteko je bilo preklicano in pojavile so se napake."
+msgstr "Dejanje je bilo preklicano in pojavile so se napake."
 
 #: ../src/gtk/fm-progress-dlg.c:314
 msgid "Cancelled"
@@ -388,7 +385,7 @@ msgstr "Preklicano"
 
 #: ../src/gtk/fm-progress-dlg.c:318
 msgid "The file operation is finished, but there are some errors."
-msgstr "Dejanje nad datoteko je bilo končano, vendar so se pojavile napake."
+msgstr "Dejanje je končano, vendar so se pojavile napake."
 
 #: ../src/gtk/fm-progress-dlg.c:320
 msgid "Finished"
@@ -396,12 +393,10 @@ msgstr "Končano"
 
 #: ../src/gtk/fm-progress-dlg.c:339
 msgid ""
-"Some files cannot be moved to trash can because the underlying file systems "
-"don't support this operation.\n"
+"Some files cannot be moved to trash can because the underlying file systems don't support this operation.\n"
 "Do you want to delete them instead?"
 msgstr ""
-"Nekaterih datotek ni mogoče premakniti v smeti, ker datotečni sistem tega "
-"dejanja ne podpira.\n"
+"Nekaterih datotek ni mogoče premakniti v smeti, ker datotečni sistem tega dejanja ne podpira.\n"
 "Ali želite namesto tega datoteke izbrisati?"
 
 #: ../src/gtk/fm-progress-dlg.c:433
@@ -410,29 +405,30 @@ msgstr ", "
 
 #: ../src/gtk/fm-progress-dlg.c:448
 msgid "Moving files"
-msgstr "Premikanje datotek"
+msgstr "<b>Premikanje datotek</b>"
 
 #: ../src/gtk/fm-progress-dlg.c:451
 msgid "Copying files"
-msgstr "Kopiranje datotek"
+msgstr "<b>Kopiranje datotek</b>"
 
 #: ../src/gtk/fm-progress-dlg.c:454
 msgid "Trashing files"
-msgstr "Premikanje datotek v smeti"
+msgstr "<b>Premikanje datotek v smeti</b>"
 
 #: ../src/gtk/fm-progress-dlg.c:457
 msgid "Deleting files"
-msgstr "Brisanje datotek"
+msgstr "<b>Brisanje datotek</b>"
 
 #: ../src/gtk/fm-progress-dlg.c:460
 msgid "Creating symlinks"
-msgstr "Ustvarjanje simbolnih povezav"
+msgstr "<b>Ustvarjanje simbolnih povezav</b>"
 
 #: ../src/gtk/fm-progress-dlg.c:463
 msgid "Changing file attributes"
-msgstr "Spreminjanje atributov datotek"
+msgstr "<b>Spreminjanje atributov datotek</b>"
 
-#: ../src/gtk/fm-file-properties.c:117 ../src/gtk/fm-file-properties.c:122
+#: ../src/gtk/fm-file-properties.c:117
+#: ../src/gtk/fm-file-properties.c:122
 msgid "byte"
 msgid_plural "bytes"
 msgstr[0] "bajtov"
@@ -449,14 +445,12 @@ msgid "Please enter a valid group name or numeric id."
 msgstr "Vnesite veljavno ime skupine ali ID."
 
 #: ../src/gtk/fm-file-properties.c:356
-msgid ""
-"Do you want to recursively apply these changes to all files and sub-folders?"
-msgstr ""
-"Ali želite rekurzivno uveljaviti te spremembe na vseh datotekah in podmapah?"
+msgid "Do you want to recursively apply these changes to all files and sub-folders?"
+msgstr "Ali želite rekurzivno uveljaviti te spremembe na vseh datotekah in podmapah?"
 
 #: ../src/gtk/fm-file-properties.c:630
 msgid "Files of different types"
-msgstr "Datoteke različnih vrst"
+msgstr "Različne vrste datotek"
 
 #: ../src/gtk/fm-file-properties.c:664
 msgid "Multiple Files"
@@ -472,10 +466,11 @@ msgstr "Odklopi nosilec"
 
 #: ../src/gtk/fm-places-view.c:83
 msgid "Eject Removable Media"
-msgstr "Izvrzi odstranljiv nosilec"
+msgstr "Izvrzi odstranljivi nosilec"
 
 #. FIXME: we need to set a proper parent window for the dialog
-#: ../src/gtk/fm-places-view.c:96 ../src/gtk/fm-places-view.c:720
+#: ../src/gtk/fm-places-view.c:96
+#: ../src/gtk/fm-places-view.c:720
 msgid "Rename Bookmark Item"
 msgstr "Preimenuj zaznamek"
 
@@ -491,11 +486,13 @@ msgstr "Izprazni smeti"
 msgid "Enter a new name:"
 msgstr "Vnesite novo ime:"
 
-#: ../src/gtk/fm-side-pane.c:49 ../src/gtk/fm-side-pane.c:297
+#: ../src/gtk/fm-side-pane.c:49
+#: ../src/gtk/fm-side-pane.c:297
 msgid "Places"
 msgstr "Mesta"
 
-#: ../src/gtk/fm-side-pane.c:50 ../src/gtk/fm-side-pane.c:307
+#: ../src/gtk/fm-side-pane.c:50
+#: ../src/gtk/fm-side-pane.c:307
 msgid "Directory Tree"
 msgstr "Drevo map"
 
@@ -503,7 +500,8 @@ msgstr "Drevo map"
 msgid "Remote"
 msgstr "Oddaljeno"
 
-#: ../src/gtk/fm-file-menu.c:86 ../src/gtk/fm-file-menu.c:87
+#: ../src/gtk/fm-file-menu.c:86
+#: ../src/gtk/fm-file-menu.c:87
 msgid "Open With..."
 msgstr "Odpri z ..."
 
@@ -537,23 +535,23 @@ msgstr "_Obnovi"
 
 #: ../src/gtk/fm-file-menu.c:259
 msgid "Restore trashed files to original paths"
-msgstr "Obnovi datoteke v smeteh na prvotno mesto"
+msgstr "Obnovi datoteke v smeteh na izvirno mesto"
 
 #: ../src/gtk/fm-dnd-dest.c:387
 msgid "XDirectSave failed."
-msgstr "XDirectSave ni uspel."
+msgstr "Opravilo XDirectSave ni uspelo."
 
 #: ../src/gtk/fm-app-chooser-dlg.c:96
 msgid "Use selected application to open files"
-msgstr "Datoteke odprite z izbranim programom"
+msgstr "Za odpiranje datotek te vrste bo uporabljen izbrani program."
 
 #: ../src/gtk/fm-app-chooser-dlg.c:103
 msgid "Execute custom command line to open files"
-msgstr "Datoteke odprite z ukazom po meri"
+msgstr "Za odpiranje datotek te vrste bo uporabljen ukaz po meri."
 
 #: ../src/gtk/fm-app-chooser-combo-box.c:185
 msgid "Customize"
-msgstr "Prilagodi"
+msgstr "Po meri"
 
 #: ../src/gtk/fm-folder-view.c:588
 msgid "Name"
@@ -569,7 +567,7 @@ msgstr "Velikost"
 
 #: ../src/gtk/fm-folder-view.c:620
 msgid "Modified"
-msgstr "Spremenjeno"
+msgstr "Datum spremembe"
 
 #: ../src/gtk/fm-app-menu-view.c:157
 msgid "Installed Applications"
@@ -579,7 +577,8 @@ msgstr "Nameščeni programi"
 msgid "Error"
 msgstr "Napaka"
 
-#: ../src/gtk/fm-gtk-utils.c:55 ../src/gtk/fm-gtk-utils.c:67
+#: ../src/gtk/fm-gtk-utils.c:55
+#: ../src/gtk/fm-gtk-utils.c:67
 msgid "Confirm"
 msgstr "Potrdi"
 
@@ -593,7 +592,7 @@ msgstr "Izberite mapo"
 
 #: ../src/gtk/fm-gtk-utils.c:452
 msgid "Only system administrators have the permission to do this."
-msgstr "Za to dejanje imajo pravico le skrbniki sistema."
+msgstr "To dejanje lahko izvedejo le skrbniki sistema."
 
 #: ../src/gtk/fm-gtk-utils.c:531
 msgid "Do you want to move the selected files to trash can?"
@@ -621,13 +620,13 @@ msgid ""
 "This text file '%s' seems to be an executable script.\n"
 "What do you want to do with it?"
 msgstr ""
-"Besedilna datoteka '%s' je izvedljivi skript.\n"
+"Besedilna datoteka »%s« je izvedljivi skript.\n"
 "Kaj želite storiti?"
 
 #: ../src/gtk/fm-gtk-file-launcher.c:122
 #, c-format
 msgid "This file '%s' is executable. Do you want to execute it?"
-msgstr "Datoteka '%s' je izvedljiva. Ali jo želite izvesti?"
+msgstr "Datoteka »%s« je izvedljiva. Ali jo želite izvesti?"
 
 #: ../src/gtk/fm-dir-tree-model.c:353
 msgid "<No Sub Folder>"
@@ -637,27 +636,28 @@ msgstr "<Ni podmap>"
 msgid "Loading..."
 msgstr "Nalaganje ..."
 
-#: ../src/job/fm-dir-list-job.c:231 ../src/job/fm-dir-list-job.c:240
+#: ../src/job/fm-dir-list-job.c:231
+#: ../src/job/fm-dir-list-job.c:240
 #: ../src/job/fm-dir-list-job.c:337
 #, c-format
 msgid "The specified directory is not valid"
-msgstr "Navedena mapa ni veljavna"
+msgstr "Navedena mapa ni veljavna."
 
 #: ../src/job/fm-file-ops-job-xfer.c:53
 msgid "Source and destination are the same."
-msgstr "Izvor in cilj sta enaka."
+msgstr "Izvorna in ciljna mapa sta enaki."
 
 #: ../src/job/fm-file-ops-job-xfer.c:60
 msgid "Cannot move a folder into its sub folder"
-msgstr "Mape ni mogoče premakniti v njeno podmapo"
+msgstr "Mape ni mogoče premakniti v lastno podmapo."
 
 #: ../src/job/fm-file-ops-job-xfer.c:62
 msgid "Cannot copy a folder into its sub folder"
-msgstr "Mape ni mogoče kopirati v njeno podmapo"
+msgstr "Mape ni mogoče kopirati v lastno podmapo."
 
 #: ../src/job/fm-file-ops-job-xfer.c:64
 msgid "Destination is a sub folder of source"
-msgstr "Cilj je podmapa izvora"
+msgstr "Cilj je podmapa izvorne mape."
 
 #: ../src/gtk/fm-places-model.c:451
 msgid "Trash"
@@ -670,155 +670,157 @@ msgstr "Namizje"
 #. Translator: The word "blank" is used as an adjective, e.g. we are decsribing discs that are already blank
 #: ../src/udisks/g-udisks-device.c:41
 msgid "CD-ROM Disc"
-msgstr "CD-ROM disk"
+msgstr "Disk CD-ROM"
 
 #: ../src/udisks/g-udisks-device.c:41
 msgid "Blank CD-ROM Disc"
-msgstr "Prazen CD-ROM disk"
+msgstr "Prazen disk CD-ROM"
 
 #: ../src/udisks/g-udisks-device.c:42
 msgid "CD-R Disc"
-msgstr "CD-R disk"
+msgstr "Disk CD-R"
 
 #: ../src/udisks/g-udisks-device.c:42
 msgid "Blank CD-R Disc"
-msgstr "Prazen CD-R disk"
+msgstr "Prazen disk CD-R"
 
 #: ../src/udisks/g-udisks-device.c:43
 msgid "CD-RW Disc"
-msgstr "CD-RW disk"
+msgstr "Disk CD-RW"
 
 #: ../src/udisks/g-udisks-device.c:43
 msgid "Blank CD-RW Disc"
-msgstr "Prazen CD-RW disk"
+msgstr "Prazen disk CD-RW"
 
-#: ../src/udisks/g-udisks-device.c:44 ../src/udisks/g-udisks-device.c:45
+#: ../src/udisks/g-udisks-device.c:44
+#: ../src/udisks/g-udisks-device.c:45
 msgid "DVD-ROM Disc"
-msgstr "DVD-ROM disk"
+msgstr "Disk DVD-ROM"
 
-#: ../src/udisks/g-udisks-device.c:44 ../src/udisks/g-udisks-device.c:45
+#: ../src/udisks/g-udisks-device.c:44
+#: ../src/udisks/g-udisks-device.c:45
 msgid "Blank DVD-ROM Disc"
-msgstr "Prazen DVD-ROM disk"
+msgstr "Prazen disk DVD-ROM"
 
 #: ../src/udisks/g-udisks-device.c:46
 msgid "DVD-RW Disc"
-msgstr "DVD-RW disk"
+msgstr "Disk DVD-RW"
 
 #: ../src/udisks/g-udisks-device.c:46
 msgid "Blank DVD-RW Disc"
-msgstr "Prazen DVD-RW disk"
+msgstr "Prazen disk DVD-RW"
 
 #: ../src/udisks/g-udisks-device.c:47
 msgid "DVD-RAM Disc"
-msgstr "DVD-RAM disk"
+msgstr "Disk DVD-RAM"
 
 #: ../src/udisks/g-udisks-device.c:47
 msgid "Blank DVD-RAM Disc"
-msgstr "Prazen DVD-RAM disk"
+msgstr "Prazen disk DVD-RAM"
 
 #: ../src/udisks/g-udisks-device.c:48
 msgid "DVD+R Disc"
-msgstr "DVD+R disk"
+msgstr "Disk DVD+R"
 
 #: ../src/udisks/g-udisks-device.c:48
 msgid "Blank DVD+R Disc"
-msgstr "Prazen DVD+R disk"
+msgstr "Prazen disk DVD+R"
 
 #: ../src/udisks/g-udisks-device.c:49
 msgid "DVD+RW Disc"
-msgstr "DVD+RW disk"
+msgstr "Disk DVD+RW"
 
 #: ../src/udisks/g-udisks-device.c:49
 msgid "Blank DVD+RW Disc"
-msgstr "Prazen DVD+RW disk"
+msgstr "Prazen disk DVD+RW"
 
 #: ../src/udisks/g-udisks-device.c:50
 msgid "DVD+R DL Disc"
-msgstr "DVD+R DL disk"
+msgstr "Disk DVD+R DL"
 
 #: ../src/udisks/g-udisks-device.c:50
 msgid "Blank DVD+R DL Disc"
-msgstr "Prazen DVD+R DL disk"
+msgstr "Prazen disk DVD+R DL"
 
 #: ../src/udisks/g-udisks-device.c:51
 msgid "DVD+RW DL Disc"
-msgstr "DVD+RW DL disk"
+msgstr "Disk DVD+RW DL"
 
 #: ../src/udisks/g-udisks-device.c:51
 msgid "Blank DVD+RW DL Disc"
-msgstr "Prazen DVD+RW DL disk"
+msgstr "Prazen disk DVD+RW DL"
 
 #: ../src/udisks/g-udisks-device.c:52
 msgid "Blu-Ray Disc"
-msgstr "Blu-Ray disk"
+msgstr "Disk Blu-Ray"
 
 #: ../src/udisks/g-udisks-device.c:52
 msgid "Blank Blu-Ray Disc"
-msgstr "Prazen Blu-Ray disk"
+msgstr "Prazen disk Blu-Ray"
 
 #: ../src/udisks/g-udisks-device.c:53
 msgid "Blu-Ray R Disc"
-msgstr "Blu-Ray R disk"
+msgstr "Disk Blu-Ray R"
 
 #: ../src/udisks/g-udisks-device.c:53
 msgid "Blank Blu-Ray R Disc"
-msgstr "Prazen Blu-Ray R disk"
+msgstr "Prazen disk Blu-Ray R"
 
 #: ../src/udisks/g-udisks-device.c:54
 msgid "Blu-Ray RW Disc"
-msgstr "Blu-Ray RW disk"
+msgstr "Disk Blu-Ray RW"
 
 #: ../src/udisks/g-udisks-device.c:54
 msgid "Blank Blu-Ray RW Disc"
-msgstr "Prazen Blu-Ray RW disk"
+msgstr "Prazen disk Blu-Ray RW"
 
 #: ../src/udisks/g-udisks-device.c:55
 msgid "HD DVD Disc"
-msgstr "HD DVD disk"
+msgstr "Disk HD DVD"
 
 #: ../src/udisks/g-udisks-device.c:55
 msgid "Blank HD DVD Disc"
-msgstr "Prazen HD DVD disk"
+msgstr "Prazen disk HD DVD"
 
 #: ../src/udisks/g-udisks-device.c:56
 msgid "HD DVD-R Disc"
-msgstr "HD DVD-R disk"
+msgstr "Disk HD DVD-R"
 
 #: ../src/udisks/g-udisks-device.c:56
 msgid "Blank HD DVD-R Disc"
-msgstr "Prazen HD DVD-R disk"
+msgstr "Prazen disk HD DVD-R"
 
 #: ../src/udisks/g-udisks-device.c:57
 msgid "HD DVD-RW Disc"
-msgstr "HD DVD-RW disk"
+msgstr "Disk HD DVD-RW"
 
 #: ../src/udisks/g-udisks-device.c:57
 msgid "Blank HD DVD-RW Disc"
-msgstr "Prazen HD DVD-RW disk"
+msgstr "Prazen disk HD DVD-RW"
 
 #: ../src/udisks/g-udisks-device.c:58
 msgid "MO Disc"
-msgstr "MO disk"
+msgstr "Disk MO"
 
 #: ../src/udisks/g-udisks-device.c:58
 msgid "Blank MO Disc"
-msgstr "Prazen MO disk"
+msgstr "Prazen disk MO"
 
 #: ../src/udisks/g-udisks-device.c:59
 msgid "MRW Disc"
-msgstr "MRW disk"
+msgstr "Disk MRW"
 
 #: ../src/udisks/g-udisks-device.c:59
 msgid "Blank MRW Disc"
-msgstr "Prazen MRW disk"
+msgstr "Prazen disk MRW"
 
 #: ../src/udisks/g-udisks-device.c:60
 msgid "MRW/W Disc"
-msgstr "MRW/W disk"
+msgstr "Disk MRW/W"
 
 #: ../src/udisks/g-udisks-device.c:60
 msgid "Blank MRW/W Disc"
-msgstr "Prazen MRW/W disk"
+msgstr "Prazen disk MRW/W"
 
 #: ../src/udisks/g-udisks-device.c:299
 msgid "Blank Optical Disc"
@@ -827,3 +829,4 @@ msgstr "Prazen optični disk"
 #: ../src/udisks/g-udisks-device.c:301
 msgid "Optical Disc"
 msgstr "Optični disk"
+
