--- a/po/et.po
+++ b/po/et.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-08-09 21:06+0200\n"
-"PO-Revision-Date: 2011-10-24 03:10+0200\n"
-"Last-Translator: veeall <marek.allvee@gmail.com>\n"
+"PO-Revision-Date: 2012-01-22 18:40+0200\n"
+"Last-Translator: Anari <anari.jalakas@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: et\n"
 "MIME-Version: 1.0\n"
@@ -276,7 +276,7 @@ msgstr ""
 
 #: ../data/ui/preferred-apps.glade.h:9
 msgid "The preferred Web Browser will be used to open hyperlinks."
-msgstr "Eelistatud veebilehitsejat kasutatakse veebiviitade avamisel"
+msgstr "Eelistatud veebilehitsejat kasutatakse veebilinkide avamisel"
 
 #: ../data/ui/exec-file.glade.h:1
 msgid "Execute File"
